--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 attohttpc = { version = "0.22.0", default-features = false, features = ["compress", "json", "rustls"] }
+chrono = { version = "0.4.22", features = ["clock", "std"] }
 clap = { version = "3.2.22", features = ["cargo", "env", "wrap_help"] }
 serde_json = "1.0.85"
 
