--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "pgduz"
+description = "pg_dump with Zoho WorkDrive uploader"
 version = "0.1.0"
 edition = "2021"
+authors = ["sycured <60801403+sycured@users.noreply.github.com>"]
 categories = ["command-line-utilities"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
